syntax = "proto3";
package yt_scraper;

option go_package = "wavelength/server/proto/yt_scraper;yt_scraperpb";

service YTScraper {
  rpc GetSearchSuggestions(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string query = 1;
}

message SearchResponse {
  message SuggestedLink {
    string thumbnail = 1;
    string title = 2;
    string subtitle = 3;
    string browse_id = 4;
    string type = 6;
  }

  repeated string suggested_queries = 1;
  repeated SuggestedLink suggested_links = 2;
}
